--- a/gb/23/2/13/n13928809.md
+++ b/gb/23/2/13/n13928809.md
@@ -8,13 +8,13 @@
 <hr>
 <p>【大纪元2023年02月13日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县长钟东锦2月13日在各级学校<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%80%E5%AD%A6%E6%97%A5.md#1">开学日</a>上午，视察头份市信义国小学生上学情形，并在校门口、路口担任导护<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BF%97%E5%B7%A5.md#1">志工</a>，协助小朋友<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%89%E5%85%A8.md#1">安全</a>过马路，并向家长道早安致意。他说，各校皆以干净、安全的优质<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A0%A1%E5%9B%AD.md#1">校园</a>环境迎接学生，期让学生快乐学习、成长，请家长放心、安心。</p>
 <p>苗栗县各级学校111（2022）学年度第2学期2月13日正式开学，县长钟东锦由教育处长叶芯慧、县警局长庄胜雄等人陪同至信义国小视察，以了解学校开学整备及学生上学情形。</p>
-<figure id="attachment_13928814" aria-describedby="caption-attachment-13928814" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928814-599732.jpg"><img class="size-large wp-image-13928814" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928814-599732-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13928814" class="wp-caption-text">县长担任导护<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BF%97%E5%B7%A5.md#1">志工</a>。（苗县府提供）</figcaption></figure>
+<figure id="attachment_13928814" aria-describedby="caption-attachment-13928814" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928814-599732.jpg"><img class=" wp-image-13928814" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928814-599732-600x400.jpg" alt="" width="452" b="301" /></a><figcaption id="caption-attachment-13928814" class="wp-caption-text">县长担任导护<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BF%97%E5%B7%A5.md#1">志工</a>。（苗县府提供）</figcaption></figure>
 <p>今天上午7时许，县长钟东锦穿着导护志工背心，手持指挥棒，在信义国小旁的复兴街、信中路口协助学童<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%89%E5%85%A8.md#1">安全</a>通过马路上学，并在校门口欢迎学童上学，并向家长道早安致意，同时亦提醒校方遵照中央宣布的指引，滚动调整相关防疫措施，随时掌握教职员工及学生的健康状况。</p>
-<figure id="attachment_13928811" aria-describedby="caption-attachment-13928811" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928811-599729.jpg"><img class="size-large wp-image-13928811" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928811-599729-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13928811" class="wp-caption-text">县长颁发福袋。（苗县府提供）</figcaption></figure>
+<figure id="attachment_13928811" aria-describedby="caption-attachment-13928811" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928811-599729.jpg"><img class=" wp-image-13928811" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928811-599729-600x400.jpg" alt="" width="452" b="301" /></a><figcaption id="caption-attachment-13928811" class="wp-caption-text">县长颁发福袋。（苗县府提供）</figcaption></figure>
 <p>此外，县长钟东锦在信义国小协和厅颁发黄琼龄、林燕珍、徐荣昌、罗士凯、黄苏茂、简亦恒等6位导护志工感谢状，接着与504班学生进行交通安全小游戏，县长担任闯关关主，当大电视显示题目后，学生以平板抢答，颁发最高分前6名奖品，同时县长钟东锦亦赠送每位学生一个福袋，让刚开学的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A0%A1%E5%9B%AD.md#1">校园</a>充满欢乐、惊喜。</p>
 <p>县长钟东锦指出，今天视察信义国小学生上学情形，导护志工引导学生通过马路非常顺畅，让学生安全无疑虑，除了交通安全，亦了解志工的工作有无需要协助改善的地方，如果有问题，教育处会全力以赴的协助解决。</p>
-<figure id="attachment_13928813" aria-describedby="caption-attachment-13928813" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928813-599731.jpg"><img class="size-large wp-image-13928813" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928813-599731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13928813" class="wp-caption-text">县长期勉同学认真读书。（苗县府提供）</figcaption></figure>
-<figure id="attachment_13928812" aria-describedby="caption-attachment-13928812" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928812-599730.jpg"><img class="size-large wp-image-13928812" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928812-599730-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13928812" class="wp-caption-text">县长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%80%E5%AD%A6%E6%97%A5.md#1">开学日</a>巡视头份信义国小。（苗县府提供）</figcaption></figure>
+<figure id="attachment_13928813" aria-describedby="caption-attachment-13928813" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928813-599731.jpg"><img class=" wp-image-13928813" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928813-599731-600x400.jpg" alt="" width="452" b="301" /></a><figcaption id="caption-attachment-13928813" class="wp-caption-text">县长期勉同学认真读书。（苗县府提供）</figcaption></figure>
+<figure id="attachment_13928812" aria-describedby="caption-attachment-13928812" style="width: 452px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13928812-599730.jpg"><img class=" wp-image-13928812" src="https://i.epochtimes.com/assets/uploads/2023/02/id13928812-599730-600x400.jpg" alt="" width="452" b="301" /></a><figcaption id="caption-attachment-13928812" class="wp-caption-text">县长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%80%E5%AD%A6%E6%97%A5.md#1">开学日</a>巡视头份信义国小。（苗县府提供）</figcaption></figure>
 <p>钟东锦并说，苗县目前约有320位导护志工，有关执勤保险部分，由县府全额负担投保，并定期办理导护志工基础及特殊训练，以持续维护校园安全。同时，期勉学生们新学期开始要更认真学习，听从老师的教导，亦希望师长们秉持爱心和耐心，引导孩子全面发展，健康成长。◇</p>
 <p>责任编辑：黄善</p>
 
@@ -30,37 +30,37 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927430.md#1">遏阻校园暴力 纽约市警局增加警力部署</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927445.md#1">湾区最安全的城市在哪里？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927603.md#1">【全球新闻】威胁民航安全 美再击落不明飞行物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928005.md#1">白沙屯拱天宫妈祖徒步进香起驾 信众喜迎9天8夜宗教之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927538.md#1">苗栗县寄养家庭授证 资深表扬典礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063863.md#1">防癌一起来 GO-GO-GO不是口号而是行动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063221.md#1">苗栗客家艺文嘉年华-广场舞比赛 今日启动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10730270.md#1" target="_blank">观雨堂主：“道德错乱”下的卞仲耘之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10571152.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923685.md#1">【百年真相】故意黑江青？上海公安局长被关7年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927307.md#1">【未解之谜】改命用错招 预言大师难逃宿命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920929.md#1">中国人，谁能拯救你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923126.md#1">【节气养生】立春怎么顺时“养生”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927703.md#1">【新唐人大视野】中共扩大征兵动员 释何信号？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927748.md#1">【马克时空】俄乌战争将满周年 俄军还有后劲吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895817.md#1">【思想领袖】“觉醒派”是如何占领新闻业的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927289.md#1">中共取消封控后 往返中国的航班为何仍很少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927753.md#1">央视翻车 网民曝中国食品放射物标准超日本16倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927460.md#1">传网红“军中飞燕”染疫病亡 被曝曾换器官</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927287.md#1">曾身陷囹圄财产归零 刘晓庆开直播卖书法作品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927303.md#1">舒淇甜蜜放闪冯德伦“老公在哪家就在哪”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927257.md#1">拍新歌MV意外摔车 张学友自嘲年纪大了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928300.md#1">与周星驰“王不见王”？梁朝伟述2人真实交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927720.md#1">《恋爱大战》影评：厌恶异性的男女 也能成为一对情侣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926920.md#1">浴巾如何清洗才会柔软和吸水？ 专家告诉你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923230.md#1">不用昂贵眼霜 13个经典自然疗法缓解黑眼圈、黑眼袋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927000.md#1">睽违三年 札幌冰雪节壮观雪雕巡礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928109.md#1">糖都是不好的吗？这些糖对你好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927436.md#1">新拐点！湾区房地产或迎来买方市场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063209.md#1">【全球新闻】中共大使被召见 日本访华被取消</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/13/n13928809.htm">县长开学日视察信义国小学童上学 并担任导护志工维护安全</a></p><hr>
