--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/3/n10612921.md#1" target="_blank">炮灰与英雄——中美韩战军人的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -130,8 +130,8 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063214.md#1">【中国禁闻】疫情又起 法轮功创始人：针对共产党</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063593.md#1">【新唐人快报】刘军被查 中超6任董事长全落马</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063209.md#1">【全球新闻】中共大使被召见 日本访华被取消</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
