--- a/gb/18/8/13/n10634323.md
+++ b/gb/18/8/13/n10634323.md
@@ -33,38 +33,38 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/30/n10348630.md#1">独立智库报告：澳洲大学生面临辍学高风险</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/31/n10443300.md#1">维多利亚大学新生一个月只学一门课</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/18/7/20/n10576111.md#1">墨尔本大学半数新生来自公校</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13951985.md#1">通胀飙升 澳300万人学生债务将猛增45亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13951976.md#1">因生活成本压力失眠 四成澳人醒来感疲倦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13951971.md#1">墨尔本机场获评澳洲及太平洋地区最佳机场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063987.md#1">首都政府启动新宣传活动 助居民获财务援助</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063988.md#1">首都NAPLAN表现优于全国 阅读成绩超各州</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063989.md#1">堪培拉科研人员研究蜜蜂螫针取得成效</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/13/n10054247.md#1" target="_blank">杨宁：不容粉饰 巴金季羡林韦君宜痛批文革</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944812.md#1">柳夫人天赋异禀知天命 功夫奇特一人胜千军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923682.md#1">【古道人生】看相的说他恐怕冻饿而死 他却中了进士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951213.md#1">【环球直击】无人机冲撞事件 美防长谴责俄罗斯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951402.md#1">【有冇搞错】浙商南官 李强踏进“八卦阵”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951648.md#1">【十字路口】中共自曝无力对台出兵？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950264.md#1">女作家铁凝任中共人大副委员长 涉黄小说被翻出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949967.md#1">传李强祖屋禁止靠近 祖坟24小时专人看管</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950215.md#1">美军：MQ-9无人机遭俄苏-27撞击坠海</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949692.md#1">杨紫琼获封奥斯卡影后 李安2句话恭喜好友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949723.md#1">李冰冰贺杨紫琼封后 杨紫的粉丝抢着回复惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950227.md#1">疫情之后又确诊甲流 于和伟自嘲：挺会赶时髦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949906.md#1">奥斯卡典礼 卡卡素颜素装登台献唱《牵我的手》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950256.md#1">大豆抗癌又降血压 正确食用很重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945694.md#1">保持大脑敏锐 胡萝卜不可忽视的6大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947423.md#1">传统药物破坏身体系统 8种自然疗法缓解头痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943994.md#1">想延年益寿？远离垃圾食物的诱惑是最好方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949934.md#1">研究显示 戴眼罩睡觉可改善认知能力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063209.md#1">【全球新闻】中共大使被召见 日本访华被取消</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/13/n10634323.htm">调查：大学生经济窘迫影响学业</a></p><hr>
